SERVER-21854 Add request id to RemoteCommandRequest

Having identifier associated with each request allows us to trace requests
throughout the ASIO network threads.

This change doesn't fix the bug, but makes investigation easier.